src/objects/ISA_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_ISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash ISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocks_and_Shares_ISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stocks and Shares ISA</label>
        <type>Checkbox</type>
    </fields>
    <label>ISA Manager</label>
    <nameField>
        <label>ISA Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISA Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>